force-app/main/default/objects/New_Application__c/New_Application__c.object-meta.xml
<CustomObject>
    <label>Save for Later</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Application#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>