force-app/main/default/objects/New_Application__c/fields/Applicant_Insured__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Insured__c</fullName>
    <label>Applicant/Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>App2Quote</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>