force-app/main/default/objects/New_Application__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <formula>Applicant_Insured__r.FEIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEIN#</label>
    <type>Text</type>
</CustomField>