force-app/main/default/objects/New_Application__c/fields/Indicated_Premium__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Premium__c</fullName>
    <formula>Applicant_Insured__r.Indicated_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>