force-app/main/default/objects/New_Application__c/fields/Lawsuit__c.field-meta.xml
<CustomField>
    <fullName>Lawsuit__c</fullName>
    <formula>TEXT(Applicant_Insured__r.Lawsuit_in_lawt_5_years__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawsuit in Last 5 years?</label>
    <type>Text</type>
</CustomField>