force-app/main/default/objects/New_Application__c/fields/Name_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Quote__c</fullName>
    <formula>Applicant_Insured__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name on Quote</label>
    <type>Text</type>
</CustomField>