force-app/main/default/objects/New_Application__c/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <formula>Applicant_Insured__r.Physical_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical City</label>
    <type>Text</type>
</CustomField>