force-app/main/default/objects/New_Application__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <formula>Applicant_Insured__r.Physical_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical State</label>
    <type>Text</type>
</CustomField>