force-app/main/default/objects/New_Application__c/fields/Physicial_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Physicial_Address_2__c</fullName>
    <formula>Applicant_Insured__r.Physical_Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Address 2</label>
    <type>Text</type>
</CustomField>