force-app/main/default/objects/New_Application__c/fields/Physicial_Address__c.field-meta.xml
<CustomField>
    <fullName>Physicial_Address__c</fullName>
    <formula>Applicant_Insured__r.Physical_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>