force-app/main/default/objects/New_Application__c/fields/Premium_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Premium_on_Quote__c</fullName>
    <label>Premium on Quote</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>