force-app/main/default/objects/New_Application__c/fields/Quote_given_by__c.field-meta.xml
<CustomField>
    <fullName>Quote_given_by__c</fullName>
    <label>Quote given by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>